XMLtoCSV/objects/unpackaged/objects/Expense_Line_vod__c.object
<CustomObject>
    <description>Contains details of an individual expense line. Represents an individual line on an invoice, broken out by sub-type.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Paid expense.</description>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_vod__c</fullName>
        <description>Committed expense.</description>
        <label>Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the expense.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Budget_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The budget an expense is being paid from. This field must be populated for the expense line to roll up to a budget.</description>
        <label>Event Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event_vod__c</field>
                <operation>equals</operation>
                <valueField>EM_Event_Budget_vod__c.Event_vod__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Event_Budget_vod__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Line_Expense_Budgets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event for which an expense was incurred.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Lines_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Estimate_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional relationship to roll up actual expenses to individual estimates (e.g. rolling up all meal expenses to the meal estimate).</description>
        <label>Expense Estimate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Expense_Estimate_vod__c.Event_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event_vod__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Expense_Estimate_vod__c</referenceTo>
        <relationshipLabel>Expense Estimates</relationshipLabel>
        <relationshipName>Expense_Line_Expense_Estimates_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Header_vod__c</fullName>
        <description>Relationship to an expense header</description>
        <label>Expense Header</label>
        <referenceTo>Expense_Header_vod__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Code_vod__c</fullName>
        <description>Stamped value of the expense type code as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Expense Type Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Name_vod__c</fullName>
        <description>Stamped value of the expense type as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Expense Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The type of the expense.</description>
        <label>Expense Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Expense_Type_vod__c.Active_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Expense_Type_vod__c</referenceTo>
        <relationshipLabel>Expense Lines</relationshipLabel>
        <relationshipName>Expense_Line_Expense_Types_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_Of_People_vod__c</fullName>
        <description>Displays the number of people an expense line is split.</description>
        <label># People</label>
        <summaryForeignKey>Expense_Attribution_vod__c.Expense_Line_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Expense_Type_Code_vod__c</fullName>
        <description>Stamped value of the parent expense type code as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Parent Expense Type Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Expense_Type_Name_vod__c</fullName>
        <description>Stamped value of the parent expense type as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Parent Expense Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Amount_Per_Person_vod__c</fullName>
        <description>Average split amount per person. Calculated by dividing the actual amount of the expense lines by the number of times it is split.</description>
        <formula>IF(Number_Of_People_vod__c = 0, 0, Actual_vod__c / Number_Of_People_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount Person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>EL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <recordTypes>
        <fullName>Event_Expense_Line_vod</fullName>
        <active>true</active>
        <description>Event Expense Line</description>
        <label>Event_Expense_Line_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>